--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 # Hugo configuration file
-title: My Site
+title: GoFrame Bootcamp
 
 # import hextra as module
 module:
@@ -25,7 +25,7 @@ menu:
       pageRef: /about
       weight: 2
     - name: Contact ↗
-      url: "https://github.com/imfing"
+      url: "https://github.com/UncleChair"
       weight: 3
     - name: Search
       weight: 4
@@ -33,14 +33,9 @@ menu:
         type: search
     - name: GitHub
       weight: 5
-      url: "https://github.com/imfing/hextra-starter-template"
+      url: "https://github.com/UncleChair/GoFrameBootcamp"
       params:
         icon: github
-    - name: Twitter
-      weight: 6
-      url: "https://twitter.com/"
-      params:
-        icon: x-twitter
 
 params:
   navbar:
@@ -48,9 +43,9 @@ params:
     displayLogo: false
 
   footer:
-    displayCopyright: false
+    displayCopyright: true
     displayPoweredBy: true
 
   editURL:
     enable: true
-    base: "https://github.com/imfing/hextra-starter-template/edit/main/content"
+    base: "https://github.com/UncleChair/GoFrameBootcamp/edit/main/content"
