Doc: re-arrange introduction page

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -18,21 +18,24 @@ markup:
 
 menu:
   main:
+    - name: Official Docs
+      url: "https://goframe.org"
+      weight: 1
     - name: WebServer
       pageRef: /web-server/
-      weight: 1
+      weight: 2
     - name: About
       pageRef: /about
-      weight: 2
+      weight: 3
     - name: Contact ↗
       url: "https://github.com/UncleChair"
-      weight: 3
-    - name: Search
       weight: 4
+    - name: Search
+      weight: 5
       params:
         type: search
     - name: GitHub
-      weight: 5
+      weight: 6
       url: "https://github.com/UncleChair/GoFrameBootcamp"
       params:
         icon: github
