--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,10 +1,7 @@
 # Hugo configuration file
 title: GoFrame Bootcamp
 
-# import hextra as module
-module:
-  imports:
-  - path: github.com/imfing/hextra
+theme: hextra
 
 markup:
   # allow raw html
